make the HomePage design and fetch all movies from tmdb

--- a/src/style/_settings.scss
+++ b/src/style/_settings.scss
@@ -1,4 +1,10 @@
 $font-1: "Lucida Sans";
+$font-2: "cursive";
+
+$size-1: 40px;
 
 $color-1: rgba(245,33,33,0.75);
-$color-2: #00c1ec;
+$color-2: #fcfcfc;
+$color-3: #d7d7d7;
+$color-4: #fdfdfd;
+$color-5: #ffffff;
