--- a/src/style/pagesStyle/HomePageStyle.scss
+++ b/src/style/pagesStyle/HomePageStyle.scss
@@ -6,5 +6,79 @@
     /* width: 100vh; */
     background-size: 100% 100%;
     height: 100vh;
+
+    .homeInformations{
+        display: flex;
+        flex-direction: column;
+        //background-color: red;
+        height: 50%;
+        padding-top: 7%;
+        justify-content: space-around;
+
+        @media (min-width: 1230px) and (max-width: 1300px) {
+            padding-top: 8%; 
+        }
+
+        @media (min-width: 972px) and (max-width: 1260px) {
+            padding-top: 10%; 
+        }
+
+        @media screen and (max-width: 972px) {
+            padding-top: 12%; 
+        }
+
+
+
+        .titleMessage{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            span{
+                margin: 0 2% 0px 2%;
+                font-family: $font-2;
+                font-style: italic;
+                font-weight: bold;
+                font-size: $size-1;
+
+                @media screen and (max-width: 1100px) {
+                    font-size: 30px;
+                }
+            }
+        }
+
+        .enterInformation{
+            display: flex;
+            flex-direction: column;
+            height: 70%;
+            justify-content: space-around;
+            align-items: center;
+
+            input{
+                width: 25%;
+                height: 20%;
+                text-align: center;
+                border-radius: 10px;
+                border-color: $color-3;
+                border-width: 0.5px;
+                background: $color-4;
+                box-shadow: inset 5px 5px 10px $color-3,
+                            inset -10px -10px 60px $color-5;
+            }
+
+            button{
+                margin-bottom: 4%;
+                padding: 1%;
+                border-radius: 10px;
+                background-color: $color-1;
+                border-color: $color-2;
+
+                &:hover{
+                    cursor: pointer;
+                    opacity: 0.6;
+                }
+            }
+        }
+    }
 }
 
