make the quiz design

--- a/src/style/_settings.scss
+++ b/src/style/_settings.scss
@@ -2,9 +2,12 @@ $font-1: "Lucida Sans";
 $font-2: "cursive";
 
 $size-1: 40px;
+$size-2: 30px;
+$size-3: 25px;
 
 $color-1: rgba(245,33,33,0.75);
 $color-2: #fcfcfc;
 $color-3: #d7d7d7;
 $color-4: #fdfdfd;
 $color-5: #ffffff;
+$color-6: rgba(52,132,28,0.91);
