--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,3 +2,4 @@
 @import './pagesStyle/HomePageStyle.scss';
 @import './pagesStyle/QuizPageStyle.scss';
 @import './pagesStyle/GameOverPageStyle.scss';
+@import './componentsStyle/MainContainerOfQuizStyle.scss'
