--- a/src/style/_settings.scss
+++ b/src/style/_settings.scss
@@ -4,6 +4,8 @@ $font-2: "cursive";
 $size-1: 40px;
 $size-2: 30px;
 $size-3: 25px;
+$size-4: 60px;
+$size-5: 20px;
 
 $color-1: rgba(245,33,33,0.75);
 $color-2: #fcfcfc;
@@ -11,3 +13,7 @@ $color-3: #d7d7d7;
 $color-4: #fdfdfd;
 $color-5: #ffffff;
 $color-6: rgba(52,132,28,0.91);
+$color-7: #cfc5c2;
+$color-8: #aea6a3;
+$color-9: #a49c9a;
+$color-10: #ded4d0;
