--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,4 +2,5 @@
 @import './pagesStyle/HomePageStyle.scss';
 @import './pagesStyle/QuizPageStyle.scss';
 @import './pagesStyle/GameOverPageStyle.scss';
-@import './componentsStyle/MainContainerOfQuizStyle.scss'
+@import './componentsStyle/MainContainerOfQuizStyle.scss';
+@import './componentsStyle//LoadingStyle.scss'
