make the design of the view on mobile

--- a/src/style/_settings.scss
+++ b/src/style/_settings.scss
@@ -6,6 +6,15 @@ $size-2: 30px;
 $size-3: 25px;
 $size-4: 60px;
 $size-5: 20px;
+$size-6: 37px;
+$size-7: 3px;
+$size-8: 18px;
+$size-9: 6px;
+$size-10: 50px;
+$size-11: 5px;
+$size-12: 35px;
+
+
 
 $color-1: rgba(245,33,33,0.75);
 $color-2: #fcfcfc;
