--- a/src/style/pagesStyle/GameOverPageStyle.scss
+++ b/src/style/pagesStyle/GameOverPageStyle.scss
@@ -5,6 +5,10 @@
     background-size: 100% 100%;
     height: 100vh;
 
+    @media screen and (max-width: 500px) {
+        background-size: 100%;
+    }
+
     .scoreInformations{
         height: 90%;
         width: 50%;
@@ -17,9 +21,26 @@
         align-items: center;
         
 
+        @media screen and (max-width: 500px) {
+            width: 100%;
+            top: 0;
+            position: relative;
+        }
+
+
         p{
             font-size: $size-4;
             font-family: $font-2;
+            font-weight: bold;
+
+            @media screen and (max-width: 500px) {
+                position: absolute;
+                font-size: $size-12;
+                width: 250px;
+                text-align: center;
+                top: 3%;
+                right: -2%;
+            }
 
             span{
                 color: $color-1;
@@ -32,6 +53,14 @@
             height: 90%;
             width: 40%;
             justify-content: space-between;
+
+            @media screen and (max-width: 500px) {
+                width: 60%;
+                height: 70%;
+                position: absolute;
+                bottom: -8%;   
+                justify-content: space-evenly;
+            } 
 
             .myButton, .myShareButton{
                 width: 100%;
@@ -46,17 +75,33 @@
 
                 &:hover{
                     cursor: pointer;
-                    opacity: 0.6;
                     background: $color-1;
+                }
+
+                &:active{
+                    -webkit-box-shadow: inset 1px 1px 10px #333;
+                    -moz-box-shadow:    inset 1px 1px 10px #333;
+                    box-shadow:         inset 1px 1px 10px #333;
+                }
+
+                @media screen and (max-width: 500px) {
+                    padding: 7%;
+                    font-size: 15px;           
+                    box-shadow:  5px 5px 8px $color-9,
+                            -35px -35px 70px $color-10;
                 }
             }
 
             .myShareButton{
                 display: flex;
                 justify-content: space-evenly;
-            }
 
-           
+                img{
+                    @media screen and (max-width: 500px) {
+                        width: 20px;
+                    } 
+                }
+            }
         }
 
     }
@@ -72,12 +117,24 @@
         justify-content: space-evenly;
         align-items: center;
 
-        //background-color: yellow;
+        @media screen and (max-width: 500px) {
+            width: 100%;
+            /* height: 90%; */
+            top: 35%;
+            position: relative;
+            height: 60%;
+        } 
 
         img{
             position: absolute;
             top: 0;
             left: 0;
+
+            @media screen and (max-width: 500px) {
+                width: 40px;
+                left: 5%;
+            } 
+
 
             &:hover{
                 cursor: pointer;
@@ -94,6 +151,11 @@
             border-color: $color-8;
             border-radius: 5px;
 
+            @media screen and (max-width: 500px) {
+                height: 70%;
+                margin-top: 10%;
+            } 
+
             tr{
                 border: solid;
                 border-width: 1px; 
@@ -102,12 +164,20 @@
             th{
                 font-size: $size-1;
                 background-color: $color-1;
+
+                @media screen and (max-width: 500px) {
+                    font-size: 30px;
+                } 
             }
 
             td{
                 font-size: $size-2;
                 text-align: center;
                 background-color: $color-7;
+
+                @media screen and (max-width: 500px) {
+                    font-size: 25px;
+                } 
             }
         }
     }
