--- a/src/style/pagesStyle/HomePageStyle.scss
+++ b/src/style/pagesStyle/HomePageStyle.scss
@@ -24,16 +24,38 @@
             padding-top: 10%; 
         }
 
-        @media screen and (max-width: 972px) {
+        @media (min-width: 500px) and (max-width: 972px) {
             padding-top: 12%; 
         }
 
-
+        @media screen and (max-width: 500px) {
+            padding-top: 25%; 
+        }
 
         .titleMessage{
             display: flex;
             justify-content: center;
             align-items: center;
+
+            @media screen and (max-width: 500px) {
+               flex-direction: column; 
+            }
+
+            .popcornImage{
+                width : 50px; 
+                
+                @media screen and (max-width: 500px) {
+                    display: none;
+                }
+            }
+
+            .movieImage{
+                width: 60px;
+
+                @media screen and (max-width: 500px) {
+                    width: 50px;
+                }
+            }
 
             span{
                 margin: 0 2% 0px 2%;
@@ -42,8 +64,12 @@
                 font-weight: bold;
                 font-size: $size-1;
 
-                @media screen and (max-width: 1100px) {
+                @media (min-width: 500px) and (max-width: 1100px) {
                     font-size: 30px;
+                }
+
+                @media screen and (max-width: 500px) {
+                    font-size: 18px;
                 }
             }
         }
@@ -65,18 +91,35 @@
                 background: $color-4;
                 box-shadow: inset 5px 5px 10px $color-3,
                             inset -10px -10px 60px $color-5;
+
+                
+                @media screen and (max-width: 500px) {
+                    width: 60%;
+                    margin-top: -7%;
+                }
             }
 
             button{
-                margin-bottom: 4%;
+                margin-bottom: 5%;
                 padding: 1%;
                 border-radius: 10px;
                 background-color: $color-1;
                 border-color: $color-2;
+                border: none;
 
                 &:hover{
                     cursor: pointer;
-                    opacity: 0.6;
+                }
+
+                &:active{
+                    -webkit-box-shadow: inset 1px 1px 10px #333;
+                    -moz-box-shadow:    inset 1px 1px 10px #333;
+                    box-shadow:         inset 1px 1px 10px #333;
+                }
+
+                @media screen and (max-width: 500px) {
+                    margin-top: -19%;
+                    padding: 4%;
                 }
             }
         }
