modify the css of the share button

--- a/src/style/componentsStyle/MainContainerOfQuizStyle.scss
+++ b/src/style/componentsStyle/MainContainerOfQuizStyle.scss
@@ -31,6 +31,7 @@
             position: absolute;
             left: 5%;
             bottom: -4%;
+            width:140px;
 
             @media screen and (max-width: 500px) {
                 width: 25%;
