modify the fetch data of all actors and add an error component that will be displayed when something goes wrong

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,4 +3,5 @@
 @import './pagesStyle/QuizPageStyle.scss';
 @import './pagesStyle/GameOverPageStyle.scss';
 @import './componentsStyle/MainContainerOfQuizStyle.scss';
-@import './componentsStyle//LoadingStyle.scss'
+@import './componentsStyle//LoadingStyle.scss';
+@import './componentsStyle/ErrorStyle.scss'
